--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/control/control",
     "pages/my/my",
-    "pages/history/history"
+    "pages/history/history",
+    "pages/detail/detail"
   ],
   "window":{
     "backgroundTextStyle":"light",
